add css, edit html

--- a/my_web/app/views/notes/index.html.erb
+++ b/my_web/app/views/notes/index.html.erb
@@ -22,7 +22,10 @@
         <td><%= link_to 'Edit', edit_note_path(note) %></td>
         <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+      <% end %>
+      <div class="genre">
+	Genre 1
+      </div>
   </tbody>
 </table>
 
