add rectangle css

--- a/my_web/app/views/notes/index.html.erb
+++ b/my_web/app/views/notes/index.html.erb
@@ -26,6 +26,9 @@
       <div class="genre">
 	Genre 1
       </div>
+      <div class="rectangle">
+	Rectangle
+      </div>
   </tbody>
 </table>
 
