--- a/my_web/app/assets/stylesheets/notes.scss
+++ b/my_web/app/assets/stylesheets/notes.scss
@@ -6,3 +6,15 @@
     display: inline-block;
     background-color: #c00;
 }
+
+.rectangle {
+    position: absolute;
+    width: 480px;
+    height: 360px;
+
+    background: #A7A7A7;
+    border: 2px solid #1C1C1C;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
