--- a/my_web/app/views/notes/index.html.erb
+++ b/my_web/app/views/notes/index.html.erb
@@ -13,22 +13,42 @@
   </thead>
 
   <tbody>
-    <% @notes.each do |note| %>
-      <tr>
-        <td><%= note.genre %></td>
-        <td><%= note.title %></td>
-        <td><%= note.detail %></td>
-        <td><%= link_to 'Show', note %></td>
-        <td><%= link_to 'Edit', edit_note_path(note) %></td>
-        <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-      <% end %>
-      <div class="genre">
-	Genre 1
+    <div class="genre">
+      Genre 1
+    </div>
+    <div class="rectangle">
+      Rectangle
+    </div>
+    <div class="desktop">
+      <div class="texts">
+	<div class="texts_frame">
+	  <% @notes.each do |note| %>
+	  <tr>
+	    <td><%= note.genre %></td>
+	    <td><%= note.title %></td>
+	    <td><%= note.detail %></td>
+	    <td><%= link_to 'Show', note %></td>
+	    <td><%= link_to 'Edit', edit_note_path(note) %></td>
+	    <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	  </tr>
+	  <% end %>
+	</div>
       </div>
-      <div class="rectangle">
-	Rectangle
+      <div class="genres">
+	<div class="genre">
+	  <div class="genre_frame">
+	  </div>
+	</div>
+	<div class="genres_frame">
+	</div>
       </div>
+      <div class="title">
+	<div class="title_frame">
+	</div>
+	<div class="title_string">
+	</div>
+      </div>
+    </div>
   </tbody>
 </table>
 
