add animation on pokemon

--- a/my_web/app/views/pokemon/index.html.erb
+++ b/my_web/app/views/pokemon/index.html.erb
@@ -8,5 +8,8 @@
       <li> kairyu </li>
       <li> yadoran </li>
     </ul>
+    <div class="genre_animation">
+      <%= image_tag 'genre01.png', :size => '70x70' %>
+    </div>
   </body>
 </html>
