--- a/my_web/app/assets/stylesheets/pokemon.scss
+++ b/my_web/app/assets/stylesheets/pokemon.scss
@@ -1,3 +1,35 @@
 // Place all the styles related to the pokemon controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+@keyframes fadein {
+    0% {
+	transform: scale(0.8, 0.8);
+	background-color: transparent(1.0);
+    }
+    20% {
+	transform: scale(0.84, 0.84);
+	background-color: transparent(0.8);
+    }
+    40% {
+	transform: scale(0.88, 0.88);
+	background-color: transparent(0.6);
+    }
+    60% {
+	transform: scale(0.92, 0.92);
+	background-color: transparent(0.4);
+    }
+    80% {
+	transform: scale(0.96, 0.96);
+	background-color: transparent(0.2);
+    }
+    100% {
+	transform: scale(1.0, 1.0);
+	background-color: transparent(0);
+    }
+    
+.genre_animation {
+    animation-name: fadein;
+    animation-duration: 3s;
+    animation-iteration-count: 5;
+}
