--- a/my_web/app/assets/stylesheets/pokemon.scss
+++ b/my_web/app/assets/stylesheets/pokemon.scss
@@ -5,31 +5,35 @@
 @keyframes fadein {
     0% {
 	transform: scale(0.8, 0.8);
-	background-color: transparent(1.0);
+	opacity: 0.0;
     }
     20% {
 	transform: scale(0.84, 0.84);
-	background-color: transparent(0.8);
+	opacity: 0.2;
     }
     40% {
 	transform: scale(0.88, 0.88);
-	background-color: transparent(0.6);
+	opacity: 0.4;
     }
     60% {
 	transform: scale(0.92, 0.92);
-	background-color: transparent(0.4);
+	opacity: 0.6;
     }
     80% {
 	transform: scale(0.96, 0.96);
-	background-color: transparent(0.2);
+	opacity: 0.8;
     }
     100% {
 	transform: scale(1.0, 1.0);
-	background-color: transparent(0);
+	opacity: 1.0;
     }
+}
     
 .genre_animation {
     animation-name: fadein;
-    animation-duration: 3s;
+    animation-duration: 1s;
     animation-iteration-count: 5;
+
+    width: 70px;
+    height: 70px;
 }
