--- a/my_web/app/assets/stylesheets/notes.scss
+++ b/my_web/app/assets/stylesheets/notes.scss
@@ -83,7 +83,7 @@
     left: 0px;
     top: 0px;
 
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 /* title */
@@ -106,6 +106,13 @@
     top: 0px;
     
 }
+
+/* @font-face */
+@font-face {
+    font-family: 'Megrim';
+    src: url('./Megrim.ttf');
+}
+
 /* title_string */
 .title_string {
     position: absolute;
@@ -115,6 +122,7 @@
     top: 2px;
 
     font-family: Megrim;
+    // font-family: Corner;
     font-style: normal;
     font-weight: 500;
     font-size: 96px;
