--- a/my_web/app/views/notes/index.html.erb
+++ b/my_web/app/views/notes/index.html.erb
@@ -1,52 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Notes</h1>
-
-<div class="desktop">
-  <div class="text">
-    <table>
-      <thead>
-	<tr>
-	  <th>Genre</th>
-	  <th>Title</th>
-	  <th>Detail</th>
-	  <th colspan="3"></th>
-	</tr>
-      </thead>
-
-      <tbody>
-	<% @notes.each do |note| %>
-	<tr>
-	  <td><%= note.genre %></td>
-	  <td><%= note.title %></td>
-	  <td><%= note.detail %></td>
-	  <td><%= link_to 'Show', note %></td>
-	  <td><%= link_to 'Edit', edit_note_path(note) %></td>
-	  <td><%= link_to 'Destroy', note, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-	</tr>
-	<% end %>
-      </tbody>
-    </table>
-  </div>
-  <div class="genres">
-    <div class="genre">
-      <div class="genre_frame">
-	<%= link_to image_tag('genre01.png', :size => '70x70'), controller: :pokemon, action: :index %>
+<body>
+  <!-- -->
+  <div class="desktop">
+    <div class="text">
+    </div>
+    <div class="genres">
+      <div class="genre">
+	<div class="genre_frame">
+	  <%= link_to image_tag('genre01.png', :size => '70x70'), controller: :pokemon, action: :index %>
+	</div>
+      </div>
+      <div class="genres_frame">
       </div>
     </div>
-    <div class="genres_frame">
+    <div class="title">
+      <div class="title_frame">
+	<%= image_tag 'title02.png', :size => '500x130' %>
+      </div>
     </div>
   </div>
-  <div class="title">
-    <div class="title_frame">
-      <%= image_tag 'title01.png', :size => '500x130' %>
-      <%= link_to 'Pokemon', controller: :pokemon, action: :index %>
-    </div>
-    <div class="title_string">
-      actommy
-    </div>
-  </div>
-</div>
+</body>
 
 <br>
 
